--- a/wk7/assignment/main.css
+++ b/wk7/assignment/main.css
@@ -11,7 +11,7 @@ html {
 
 body {
   font-family: "Helvetica Neue", sans-serif;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 500;
   letter-spacing: 1.5px;
   background: var(--blue-back);
@@ -73,8 +73,8 @@ h3 {
   font-size: 1rem;
   font-weight: 700;
   text-align: right;
-  text-transform: uppercase;
-  letter-spacing: 6px;
+  text-transform: capitalize;
+  letter-spacing: 3px;
 }
 
 #app {
@@ -108,7 +108,7 @@ h3 {
 }
 
 .brandImg img {
-  height: 30px;
+  max-height: 30px;
 }
 
 .alignR {
@@ -129,4 +129,105 @@ h3 {
 
 .highestDepreciation {
   background: var(--red);
+}
+
+
+@media only screen and (max-width: 960px) {
+  body {
+    font-size: 16px;
+    letter-spacing: 0;
+  }
+  
+  .title {
+    letter-spacing: 0.5px;
+    padding: 0.25rem 1rem;
+  }
+
+  h1 {
+    align-self: center;
+  }
+
+  .key {
+    height: auto;
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  }
+
+  .key h3  {
+    font-size: 1rem;
+  }
+
+  .key span {
+    padding: .5rem 1rem;
+  }
+
+  .rowDiv {
+    padding: 1rem .75rem;
+  }
+
+  .rowDiv span,
+  .title span {
+  margin: 5px auto;
+  }
+
+  h3 {
+    font-size: 1rem
+  }
+
+  .brandImg img {
+    max-height: 15px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  body {
+    font-size: 13px;
+    letter-spacing: 0;
+  }
+  
+  .title {
+    font-size: 13px;
+    letter-spacing: 0px;
+    padding: 0.25rem 1rem;
+  }
+
+  h1 {
+    font-size: 1.5rem;
+    align-self: center;
+  }
+
+  .key {
+    height: auto;
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  }
+
+  .key h3  {
+    font-size: 1rem;
+  }
+
+  .key span {
+    padding: .5rem 1rem;
+  }
+
+  .rowDiv {
+    padding: 1rem .75rem;
+  }
+
+  .rowDiv span,
+  .title span {
+    margin: 5px auto;
+  }
+
+  h3 {
+    font-size: 1rem
+  }
+
+  .brandImg img {
+    max-height: 15px;
+  }
 }
